# chartline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
analyst/: __init__.py  cli.py  exporter.py  generator.py  renderer.py  router.py  session.py
analyst/sources/: base.py
chartline/: cli.py  exporter.py  generator.py  models_types.py  renderer.py  router.py  schema.py  session.py  store.py  validator.py
chartline/notebook/: widget.py
chartline/sources/: base.py  files.py  warehouse.py
chartline/ui/: streamlit_app.py
evals/: conftest.py  test_refinement.py  test_sql.py  test_validity.py
evals/fixtures/charts/: refinement_triples.json
evals/fixtures/datasets/: sales.csv
evals/fixtures/warehouse/: build.py  sql_pairs.json
notebook/: widget.py
tests/: test_cli.py  test_exporter_altair.py  test_exporter_plotly.py  test_generator_initial.py  test_generator_refine.py  test_generator_sql.py  test_integration.py  test_models_types.py  test_notebook_widget.py  test_renderer.py  test_router.py  test_schema.py  test_session.py  test_sources_files.py  test_sources_warehouse.py  test_store.py  test_streamlit_smoke.py  test_validator.py
ui/: streamlit_app.py
