[project]
name = "chartline"
version = "0.1.0"
description = "Natural-language chart generation and refinement, built on Vega-Lite."
authors = [{ name = "Mona Alkhatib", email = "muna.alkhateeb@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyarrow>=15",
    "duckdb>=1.0",
    "sqlalchemy>=2.0",
    "jsonschema>=4.21",
    "altair>=5.2",
    "plotly>=5.20",
    "streamlit>=1.32",
    "anywidget>=0.9",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "sqlglot>=25",
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.scripts]
chartline = "analyst.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyst", "ui", "notebook"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
addopts = "-ra --strict-markers"
markers = [
    "llm_eval: uses live Anthropic API (opt-in via CHARTLINE_RUN_LLM_EVALS=1)",
    "sql_eval: uses fixture DuckDB warehouse (opt-in via CHARTLINE_RUN_SQL_EVALS=1)",
]
